# LLM-Evals

./: .gitignore  LICENSE  README.md  pyproject.toml
llm_evals/models/: anthropic.py  base.py  openai.py
llm_evals/spacial/patches/: run_eval.py  utils.py
llm_evals/spacial/patches/results/: claude-3-haiku-20240307.json  claude-3-opus-20240229.json  gpt-3.5-turbo-0125.json
